--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.19",
+    "@mui/joy": "^5.0.0-beta.17",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
